---
source: polychem/src/atomic_database.rs
description: res
expression: out
---
  × error parsing KDL

Error:   × expected a single lowercase ASCII letter, got "P"
   ╭─[test:1:1]
 1 │ P "Proton" {
   · ┬
   · ╰── invalid value
 2 │   mass 1.007276466621
   ╰────

